Fixed that contact had X-axis scrollbar

--- a/INC/CSS/Head.css
+++ b/INC/CSS/Head.css
@@ -166,7 +166,7 @@
 .map {
   box-shadow: 0px 0px 17px 0px rgba(0,0,0,0.41);
 }
-.maincard > form > input {
+.contactcard > form > input {
   font-size: large;
   font-family: 'Ubuntu', sans-serif;
   border-radius: 12px;
@@ -176,7 +176,7 @@
   width: 20%;
   border-style: solid;
 }
-.maincard > form > textarea {
+.contactcard > form > textarea {
   font-size: 18px;
   font-family: 'Ubuntu', sans-serif;
   border-radius: 12px;
@@ -188,4 +188,9 @@
 } 
 .button {
   background-color: #6eaa27;
+}
+.contactcard {
+  margin-top: 2em;
+  margin-bottom: 2em;
+  font-family: 'Ubuntu', sans-serif;
 }
